package com.yupathbuilder.backend.course_catalog.store;

import com.yupathbuilder.backend.course_catalog.dto.CourseDetailsDto;
import com.yupathbuilder.backend.course_catalog.dto.MeetingDto;
import com.yupathbuilder.backend.course_catalog.dto.SectionInfoDto;
import com.yupathbuilder.backend.scheduler_system.model.Season;
import com.yupathbuilder.backend.course_catalog.repo.CourseRepo;
import com.yupathbuilder.backend.scheduler_system.repo.SectionRepo;
import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
import org.springframework.context.annotation.Profile;
import org.springframework.stereotype.Component;

import java.util.List;

/**
 * SQL-backed course details store that joins course metadata with section and
 * meeting information for a requested term.
 */
@Component
@Profile("!stub")
@ConditionalOnProperty(name = "app.store", havingValue = "sql", matchIfMissing = true)
public class SqlCourseDetailsStore implements CourseDetailsStore {

  private final CourseRepo courseRepo;
  private final SectionRepo sectionRepo;

  public SqlCourseDetailsStore(CourseRepo courseRepo, SectionRepo sectionRepo) {
    this.courseRepo = courseRepo;
    this.sectionRepo = sectionRepo;
  }

  /**
   * Builds the detailed course response from relational course and section
   * data.
   */
  @Override
  public CourseDetailsDto getDetails(String courseCode, String season, int year) {
    var course = courseRepo.findByCourseCode(courseCode);
    if (course == null) return null;

    var sec = sectionRepo.findSectionsWithMeetings(courseCode, Season.parse(season), year);

    // Each section is flattened into the DTO shape expected by the frontend.
    var sections = sec.stream().map(s -> {
      var meetings = (s.getMeetings() == null ? List.<MeetingDto>of() :
          s.getMeetings().stream()
              .map(m -> new MeetingDto(
                  m.getDayOfWeek(),
                  m.getStartTime().toString(),
                  m.getEndTime().toString(),
                  m.getLocation()
              ))
              .toList()
      );
      return new SectionInfoDto(s.getSectionCode(), meetings);
    }).toList();

    // The API exposes the term as a single user-facing string.
    var termString = Season.parse(season).name() + " " + year;

    return new CourseDetailsDto(
        course.getCourseCode(),
        course.getTitle(),
        course.getDescription(),
        termString,
        sections
    );
  }
}

